--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "fetchafriend",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://vacuda.github.io/FetchAFriend",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -37,6 +41,7 @@
   },
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1",
+    "gh-pages": "^5.0.0",
     "jest-editor-support": "^31.0.1"
   }
 }
